--- a/story/index.html
+++ b/story/index.html
@@ -32,7 +32,7 @@
 							<h2>Mobile Suit Gundams</h2>
 							<p>Then sent to Earth independently in extremely advanced Mobile Suits, one designed by each of the scientists, known as "Gundams". Their mobile suits are called Gundams because they are constructed from a rare and astonishingly durable material known as Gundanium Alloy, which can only be created in outer space.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#second" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -41,12 +41,12 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>Gundam Pilots</h2>
 							<p>The five Gundam Pilots — Heero Yuy (pilot of the titular Wing Gundam), Duo Maxwell (pilot of the Deathscythe), Trowa Barton (pilot of the Heavyarms), Quatre Raberba Winner (pilot of the Sandrock), and Chang Wufei (pilot of the Shenlong) — originally have no knowledge of each others' existence.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#third" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -55,7 +55,7 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
 						<div class="content">
 							<h2>Hero's Align</h2>
 							<p>On first meeting any of the other five, each pilot believes the others to be enemy pilots in new OZ mobile suit designs. Once the young pilots realize that they have the same objective of destroying OZ (and in some cases the same mission), they band together to help each other complete their goals.</p>
@@ -74,7 +74,7 @@
 							<h2>5 Gundam Scientists X 5 Gundam Pilots</h2>
 							<p>The Gundam Scientists were the five scientists responsible for the design and construction of the OZ-00MS Tallgeese mobile suit. Together, the scientists also drew up the schematics for a Gundam that was superior in every way to the other five Gundams and any other MS created. These designs would later be found by a distraught Quatre Raberba Winner, who would finish the construction of the mobile suit XXXG-00W0 Wing Gundam Zero. The scientists' Tallgeese suit was used by the United Earth Sphere Alliance as the basis for their OZ-06MS Leo type mass-produced suits. After the designs for Zero were finished, the scientists split up, each taking a copy of the plans. The scientists would use the plans to create a Gundam unique to themselves. These five Gundams, however, would not be as strong as the Zero and would not contain the hazardous Zero System. The scientists and their unique suits are listed below.</p>
 							<ul class="actions stacked">
-								<li><a href="/jaynull.github.io/" class="button big wide smooth-scroll-middle">Hire Me</a></li>
+								<li><a href="https://jaynull.github.io/" class="button big wide smooth-scroll-middle">Hire Me</a></li>
 							</ul>
 						</div>
 
