--- a/story/index.html
+++ b/story/index.html
@@ -14,7 +14,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<a href="jaynull.github.io" class="button big wide smooth-scroll-middle">Back to Profile</a>
+							<a href="https://jaynull.github.io/" class="button big wide smooth-scroll-middle">Back to Profile</a>
 							<h1>Story</h1>
 							<p class="major">The story of Gundam Wing begins in the year After Colony 195, with the start of Operation Meteor; five disgruntled scientists' plan for revenge against the tyrannical OZ military organization for their oppression over the space colonies. The operation involves five young boys who have each been chosen and trained by one of the five rogue scientists.</p>
 							<ul class="actions stacked">
@@ -87,18 +87,6 @@
 									<div class="caption">
 										<h3>Doctor J</h3>
 										<p>Jay Null, better known by the alias Doctor J, is the engineer and creator of the Wing Gundam and Heero's mentor.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/tallgeese.gif" class="image">
-										<img src="images/gallery/thumbs/Howard1.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Mike Howard</h3>
-										<p>Mike Howard is one of the original engineers who designed the Tallgeese, along with the men who would become the Gundam engineers.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
